# prime_generator

./: Cargo.toml  Readme.md
src/: lib.rs  main.rs  prime_generator.rs
static/: style.css
templates/: base.html  generator.html  index.html  navbar.html
