[package]
name = "rust_test"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
rug = "1.27.0"
gmp-mpfr-sys = { version = "1", features = ["use-system-libs"]}
axum = "0.8.4"
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tera = "1.20.0"

